tests/new_array_type_mismatch.stderr
tests/new_array_type_mismatch.hop:3:18: error: HOP2004: type mismatch: cannot use expression of type *[i32 8] as *i32
