tests/new_array_type_mismatch.hop
// Verifies alloc array type mismatch.
fn foo(ma *Allocator) {
	var many *i32 = alloc [i32 8]
	_ = many
}
